# cpp-telegrambot

./: .gitignore  .gitmodules  CMakeLists.txt  DataStructureDefinitions.json  params.h  params.json  request.json  structures.h  telegram.json
cmake/: CMakeLists.txt.in
defaultcommands/: ExitCommand.h  HideCommand.h  PingCommand.h  TestCommandSet.h
example/: CMakeLists.txt  main.cpp
include/: Command.h  CommandSet.h  Logger.h  TelegramBot.h  TelegramException.h  UpdateQueue.h
include/params/: SendMessageParams.h
include/telegram/: Command.h  CommandSet.h  DataStore.h  GeneralCallback.h  JSONPersister.h  JSONWrapper.h  Storage.h  TelegramBot.h  TelegramBotUtilities.h  TelegramBot_impl.h  TelegramException.h  UpdateQueue.h  Util.h
include/telegram/defaultcommands/: ExitCommand.h  HideCommand.h  PingCommand.h  TestCommandSet.h
src/: Command.cpp  CommandSet.cpp  DataStore.cpp  JSONPersister.cpp  Logger.cpp  TelegramBot.cpp  TelegramBotMethods.cpp  TelegramBotUtilities.cpp  UpdateQueue.cpp  Util.cpp
src/params/: AnswerCallbackQueryParams.cpp  ForwardMessageParams.cpp  GetChatAdministratorsParams.cpp  GetChatMemberParams.cpp  GetChatMembersCountParams.cpp  GetChatParams.cpp  GetFileParams.cpp  GetUserProfilePhotosParams.cpp  KickChatMemberParams.cpp  LeaveChatParams.cpp  SendAudioParams.cpp  SendChatActionParams.cpp  SendContactParams.cpp  SendDocumentParams.cpp  SendFileParams.cpp  SendLocationParams.cpp  SendMessageParams.cpp  SendParams.cpp  SendPhotoParams.cpp  SendVenueParams.cpp  SendVideoParams.cpp  SendVoiceParams.cpp  UnbanChatMemberParams.cpp
structures/: DataStructureConverterFromJSON.cpp  DataStructureConverterToJSON.cpp  DataStructures.cpp  DataStructures.h
telegram/: Command.cpp  Command.h  CommandException.h  CommandSet.cpp  CommandSet.h  GeneralCallback.h  Logger.h  Storage.h  TelegramBot.cpp  TelegramBot.h  TelegramBotUtilities.h  TelegramException.h  UpdateQueue.cpp  UpdateQueue.h
telegram/implementations/: ExitCommand.h  TestCommand.h  TestCommandSet.h
telegram/params/: AnswerCallbackQueryParams.h  ForwardMessageParams.h  GetChatAdministratorsParams.h  GetChatMemberParams.h  GetChatMembersCountParams.h  GetChatParams.h  GetFileParams.h  GetUserProfilePhotosParams.h  KickChatMemberParams.h  LeaveChatParams.h  SendAudioParams.h  SendChatActionParams.h  SendContactParams.h  SendDocumentParams.h  SendFileParams.h  SendLocationParams.h  SendMessageParams.cpp  SendMessageParams.h  SendParams.h  SendPhotoParams.h  SendStickerParams.h  SendVenueParams.h  SendVideoParams.h  SendVoiceParams.h  UnbanChatMemberParams.h
